--- a/index.html
+++ b/index.html
@@ -13,36 +13,38 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="page-body container">
+<body class="page-body">
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header-logo">
-        <img src="img/logo/logo.svg" width="163" height="35" alt="Логотип «DEVICE»">
-      </a>
-      <div class="main-header-bar">
+      <div class="container">
+        <a class="main-header-logo">
+          <img src="img/logo/logo.svg" width="163" height="35" alt="Логотип «DEVICE»">
+        </a>
+
         <div class="main-navigation-wrapper">
 
-          <ul class="header-site-navigation">
-            <li>
-              <form class="search-button">
-                <input type="search" placeholder="Поиск по сайту">
-                <button type="submit">найти</button>
-              </form>
-            </li>
-            <li>
-              <a class="login-link" href="#">Войти</a>
-            </li>
-            <li>
-              <a class="compare-link" href="#">Сравнить</a>
-            </li>
-            <li>
-              <a class="cart-link" href="#">Корзина</a>
-            </li>
-          </ul>
+          <div class="header-first-level">
+            <form class="search-button">
+              <input type="search" placeholder="Поиск по сайту">
+              <button type="submit">найти</button>
+            </form>
 
-          <section class="main-menu">
+            <ul class="header-site-navigation">
+              <li>
+                <a class="login-link" href="#">Войти</a>
+              </li>
+              <li>
+                <a class="compare-link" href="#">Сравнить</a>
+              </li>
+              <li>
+                <a class="cart-link" href="#">Корзина</a>
+              </li>
+            </ul>
+          </div>
+
+          <section class="main-menu ">
             <h2>Меню сайта</h2>
-            <ul class="main-menu-list">
+            <ul class="main-menu-list header-second-level">
               <li>
                 <a class="catalog" href="catalog.html">каталог товаров</a>
                 <ul class="catalog-list">
@@ -83,30 +85,31 @@
     </nav>
   </header>
 
-  <main class="main-container">
+  <main>
 
-    <div class="slider">
+    <div class="slider container">
       <ol class="slider-list">
         <li class="slide-1">
           <img src="img/slide-1-selfie-stick.png" width="384" height="486" alt="Селфи-палка Бена Стиллера">
-          <p class="topic">Делай селфи, как Бен Стиллер!</p>
-          <p class="topic-text">Самая длинная палка для селфи доступна в нашем магазине. <br>
-            Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-          <button class="button slider-button" type="button">подробнее</button>
-          <table class="feature">
-            <tr class="characteristics">
-              <td>8,5 м</td>
-              <td>5 кг</td>
-              <td>Карбон</td>
-            </tr>
-            <tr class="description">
-              <th>Длина палки</th>
-              <th>Вес палки</th>
-              <th>Материал</th>
-            </tr>
-          </table>
+          <div class="slide-description">
+            <p class="topic">Делай селфи, как Бен Стиллер!</p>
+            <p class="topic-text">Самая длинная палка для селфи доступна в нашем магазине. <br>
+              Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+            <button class="button slider-button" type="button">подробнее</button>
+            <table class="feature">
+              <tr class="characteristics">
+                <td>8,5 м</td>
+                <td>5 кг</td>
+                <td>Карбон</td>
+              </tr>
+              <tr class="description">
+                <th>Длина палки</th>
+                <th>Вес палки</th>
+                <th>Материал</th>
+              </tr>
+            </table>
+          </div>
         </li>
-
 
         <li class="slide-2 hidden">
           <img src="img/slide-2-band.png" width="345" height="485" alt="Фитнес-браслет «Я вижу, что ты снова ешь»">
@@ -143,9 +146,15 @@
         </li>
       </ol>
 
+      <div class="slider-toggles">
+        <button type="button" class="slider-toggle slider-toggle-active">1</button>
+        <button type="button" class="slider-toggle">2</button>
+        <button type="button" class="slider-toggle">3</button>
+      </div>
+
     </div>
 
-    <section class="category">
+    <section class="category container">
       <h2>Категории товаров</h2>
       <ul class="category-list">
         <li>
@@ -171,38 +180,41 @@
 
     <section class="service">
       <h2>Сервис</h2>
-      <div>
-        <button class="button button-narrow" type="button">доставка</button>
-        <button class="button button-narrow" type="button">гарантия</button>
-        <button class="button button-narrow" type="button">кредит</button>
-      </div>
 
-      <div>
-        <ul class="service-list">
-          <li>
-            <p class="service-head">Доставка</p>
-            <p class="service-info">Мы с удовольствием доставим ваш товар прямо к вашему <br>
-              подъезду совершенно бесплатно! Ведь мы неплохо <br>
-              заработаем, поднимая его на ваш этаж.</p>
-          </li>
-          <li class="hidden">
-            <p class="service-head">Гарантия</p>
-            <p class="service-info">Если из-за возгорания купленного у нас товара у вас сгорит дом — <br>
-              не переживайте, мы выдадим вам новый. <br>
-              Товар, не дом, конечно же.<br>
-          </li>
-          <li class="hidden">
-            <p class="service-head">Кредит</p>
-            <p class="service-info">Залезть в долговую яму стало проще! Кредитные консультанты <br>
-              подберут для вас наиболее выгодные <br>
-              условия кредита. Выгодные для нашего банка, разумеется.
-          </li>
-        </ul>
-      </div>
+      <div class="wrapper container">
+        <div>
+          <button class="button button-narrow" type="button">доставка</button>
+          <button class="button button-narrow" type="button">гарантия</button>
+          <button class="button button-narrow" type="button">кредит</button>
+        </div>
 
+        <div>
+          <ul class="service-list">
+            <li>
+              <p class="service-head">Доставка</p>
+              <p class="service-info">Мы с удовольствием доставим ваш товар прямо к вашему <br>
+                подъезду совершенно бесплатно! Ведь мы неплохо <br>
+                заработаем, поднимая его на ваш этаж.</p>
+            </li>
+            <li class="hidden">
+              <p class="service-head">Гарантия</p>
+              <p class="service-info">Если из-за возгорания купленного у нас товара у вас сгорит дом — <br>
+                не переживайте, мы выдадим вам новый. <br>
+                Товар, не дом, конечно же.<br>
+            </li>
+            <li class="hidden">
+              <p class="service-head">Кредит</p>
+              <p class="service-info">Залезть в долговую яму стало проще! Кредитные консультанты <br>
+                подберут для вас наиболее выгодные <br>
+                условия кредита. Выгодные для нашего банка, разумеется.
+            </li>
+          </ul>
+        </div>
+
+      </div>
     </section>
 
-    <section>
+    <section class="container">
       <h2>Бренды</h2>
       <ul class="brands">
         <li>
@@ -228,7 +240,7 @@
       </ul>
     </section>
 
-    <div class="info-columns">
+    <div class="info-columns container">
       <section class="about-us">
         <h2 class="about-us-head">О нас</h2>
         <p class="about-us-info">Огромный выбор гаджетов не оставит равнодушным гика, <br>
@@ -256,67 +268,74 @@
   </main>
 
   <footer class="main-footer">
-    <a>
-      <img src="img/logo/logo.svg" width="163" height="35" alt="Логотип «DEVICE»">
-    </a>
+    <div class="container">
+      <div class="footer-first-level">
+        <a>
+          <img class="footer-logo" src="img/logo/logo.svg" width="163" height="35" alt="Логотип «DEVICE»">
+        </a>
 
-    <ul class="footer-site-navigation">
-      <li>
-        <a class="footer-login-link" href="#">Войти</a>
-      </li>
-      <li>
-        <a class="footer-compare-link" href="#">Сравнить</a>
-      </li>
-      <li>
-        <a class="footer-cart-link" href="#">Корзина</a>
-      </li>
-    </ul>
+        <ul class="footer-site-navigation">
+          <li>
+            <a class="footer-login-link" href="#">Войти</a>
+          </li>
+          <li>
+            <a class="footer-compare-link" href="#">Сравнить</a>
+          </li>
+          <li>
+            <a class="footer-cart-link" href="#">Корзина</a>
+          </li>
+        </ul>
+      </div>
 
-    <p class="footer-adress">
-      г. Москва, ул. Строителей, 15
-    </p>
+      <div class="footer-second-level">
+        <p class="footer-adress">
+          г. Москва, ул. Строителей, 15
+        </p>
 
-    <section class="footer-menu">
-      <h2>Меню сайта</h2>
-      <ul class="footer-menu-list">
-        <li>
-          <a class="footer-delivery" href="#">доставка</a>
-        </li>
-        <li>
-          <a class="footer-warranty" href="#">гарантия</a>
-        </li>
-        <li>
-          <a class="footer-contacts" href="#">контакты</a>
-        </li>
-      </ul>
-    </section>
+        <section class="footer-menu">
+          <h2>Меню сайта</h2>
+          <ul class="footer-menu-list">
+            <li>
+              <a class="footer-delivery" href="#">доставка</a>
+            </li>
+            <li>
+              <a class="footer-warranty" href="#">гарантия</a>
+            </li>
+            <li>
+              <a class="footer-contacts" href="#">контакты</a>
+            </li>
+          </ul>
+        </section>
 
-    <p>
-      <a class="contacts-phone" href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
-    </p>
+        <p>
+          <a class="contacts-phone" href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
+        </p>
+      </div>
 
-    <section class="footer-social">
-      <h2>Мы в социальных сетях</h2>
-      <ul class="footer-social-list">
-        <li>
-          <a href="#">Facebook</a>
-          <img class="social-button" src="img/socials-facebook.svg" width="32" height="32" alt="Логотип Facebook">
-        </li>
-        <li>
-          <a href="#">Instagram</a>
-          <img class="social-button" src="img/socials-instagram.svg" width="32" height="32" alt="Логотип Instagram">
-        </li>
-        <li>
-          <a href="#">Twitter</a>
-          <img class="social-button" src="img/socials-twitter.svg" width="32" height="32" alt="Логотип Twitter">
-        </li>
-      </ul>
-    </section>
+      <div class="footer-third-level">
+        <section class="footer-social">
+          <h2>Мы в социальных сетях</h2>
+          <ul class="footer-social-list">
+            <li>
+              <a href="#">Facebook</a>
+              <img class="social-button" src="img/socials-facebook.svg" width="32" height="32" alt="Логотип Facebook">
+            </li>
+            <li>
+              <a href="#">Instagram</a>
+              <img class="social-button" src="img/socials-instagram.svg" width="32" height="32" alt="Логотип Instagram">
+            </li>
+            <li>
+              <a href="#">Twitter</a>
+              <img class="social-button" src="img/socials-twitter.svg" width="32" height="32" alt="Логотип Twitter">
+            </li>
+          </ul>
+        </section>
 
-    <a class="footer-copywrite" href="https://htmlacademy.ru/intensive/htmlcss">
-      <img src="img/logo/logo-academ.svg" width="27" height="34" alt="Логотип «HTML Academy»">
-    </a>
-
+        <a class="footer-copywrite" href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo/logo-academ.svg" width="27" height="34" alt="Логотип «HTML Academy»">
+        </a>
+      </div>
+    </div>
   </footer>
 
   <section class="modal modal-feedback hidden">
